<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Bercerita dengan Lebih Mudah, Membuat Dunia Lebih Baik</string>
    <string name="title_welcome_page">Welcome To Story App</string>
    <string name="title_signup_page">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="belum_punya_akun">Durung due akun?</string>
    <string name="daftar_akun">Daftar nang kene</string>
    <string name="sudah_punya_akun">Wis due akun?</string>
    <string name="login_akun">Login nang kene</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="deskripsi">Keterangan</string>
    <string name="add_story">Stroy sudah di upload</string>
    <string name="judul_story">Judul Story</string>
    <string name="deskripsi_story">Tuliskan Cerita Disini</string>
    <string name="storry_added">Cerita Berhasil Disimpan</string>
    <string name="dialog_error">Ooops sepertinya ada yang salah</string>
    <string name="error_empty_email">Masukkan Email Anda</string>
    <string name="error_empty_password">Masukkan Password Anda</string>
    <string name="error_short_password">Password harus memiliki panjang minimal 8 karakter</string>
    <string name="message_incorrect_auth">Email atau password anda salah</string>
    <string name="message_unknown_state">Status Eror</string>
    <string name="error_empty_name">Masukkan Nama Anda</string>
    <string name="email_must_be_valid_email">Email harus valid</string>
    <string name="error_invalid_email">Email anda tidak valid!</string>
    <string name="message_register_success">Daftar Berhasil</string>
    <string name="success">User created</string>
    <string name="email_is_already_taken">Email is already taken</string>
    <string name="email_sudah_ada">Email Sudah digunakan</string>
    <string name="berhasil">success</string>
    <string name="berhasil_login">Berhasil Login</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="email_dan_password_tidak_terdaftar">Email Dan Password Tidak Terdaftar</string>
    <string name="password_salah">Password Salah</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="time_out">Time Out</string>
    <string name="try_again">Try Again</string>
</resources>